[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "free-agent-md"
version = "0.1.0"
description = "A daily, categorized index of AGENTS.md, CLAUDE.md, and GEMINI.md files on GitHub."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
  "httpx>=0.27,<1",
  "pydantic>=2.8,<3",
  "PyYAML>=6.0,<7",
]

[project.optional-dependencies]
dev = ["pytest>=8.2,<9", "pytest-cov>=5,<7"]

[project.scripts]
free-agent-md = "free_agent_md.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/free_agent_md"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

